# cruncher

./: Cargo.toml  README.md
src/: ast.rs  error.rs  expr.rs  jit.rs  lexer.rs  lib.rs  token.rs  util.rs
