[package]
name = "cruncher"
version = "0.1.0"
authors = ["Mika Sanchez <keyneom122@hotmail.com>"]
license = "MIT"
readme = "README.md"
repository = "tbd"
homepage = "tbd"
documentation = "tbd"
description = """
jit-compiled mathematical expression calculator
"""
edition = "2018"

[dependencies]
libm = "^0.1.4"
lazy_static = "^1.3"
cranelift = "^0.38"
cranelift-module = "^0.38"
cranelift-simplejit = "^0.38"
hashbrown = "^0.5"