[package]
name = "cruncher"
version = "0.2.1"
authors = ["Mika Sanchez <keyneom122@hotmail.com>"]
license = "MIT"
readme = "README.md"
description = """
jit-compiled mathematical expression calculator
"""

# This is a list of up to five keywords that describe this crate. Keywords
# are searchable on crates.io, and you may choose any words that would
# help someone find this crate.
keywords = ["math","expression","calculator","evaluator","jit"]

# This is a list of up to five categories where this crate would fit.
# Categories are a fixed list available at crates.io/category_slugs, and
# they must match exactly.
categories = ["science"]

# These URLs point to more information about the package. These are
# intended to be webviews of the relevant data, not necessarily compatible
# with VCS tools and the like.
documentation = "https://bitbucket.org/keyneom/cruncher/"
homepage = "https://bitbucket.org/keyneom/cruncher/"
repository = "https://bitbucket.org/keyneom/cruncher/"

edition = "2018"

[badges]
# Maintenance: `status` is required. Available options are:
# - `actively-developed`: New features are being added and bugs are being fixed.
# - `passively-maintained`: There are no plans for new features, but the maintainer intends to
#   respond to issues that get filed.
# - `as-is`: The crate is feature complete, the maintainer does not intend to continue working on
#   it or providing support, but it works for the purposes it was designed for.
# - `experimental`: The author wants to share it with the community but is not intending to meet
#   anyone's particular use case.
# - `looking-for-maintainer`: The current maintainer would like to transfer the crate to someone
#   else.
# - `deprecated`: The maintainer does not recommend using this crate (the description of the crate
#   can describe why, there could be a better solution available or there could be problems with
#   the crate that the author does not want to fix).
# - `none`: Displays no badge on crates.io, since the maintainer has not chosen to specify
#   their intentions, potential crate users will need to investigate on their own.
maintenance = { status = "experimental" }

[dependencies]
libm = "^0.2"
lazy_static = "^1.4"
cranelift = "^0.66"
cranelift-module = "^0.66"
cranelift-codegen = "^0.66"
cranelift-simplejit = "^0.66"

[dev-dependencies]
test-case = "^1"